@@ -1,3 +1,10 @@
+2002-07-21  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>
+
+	* dialog-random-generator.c (distribution_parbox_config): Handle
+	distributions having no parameters correctly.
+	(random_tool_update_sensitivity_cb, random_tool_ok_clicked_cb):
+	Added Landau distribution.
+
 2002-07-21  Jody Goldberg <jody@gnome.org>
 
 	* Release 1.1.6
